Issue #3277557 by galactus86, mherchel, rootwork: Olivero: Progress indicator percentage label does not have proper spacing

--- a/core/themes/olivero/css/components/progress.pcss.css
+++ b/core/themes/olivero/css/components/progress.pcss.css
@@ -16,3 +16,7 @@
   height: var(--sp);
   background-color: var(--color--blue-20);
 }
+
+.progress__percentage {
+  margin-inline-start: 1rem;
+}
